--- a/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client/Views/AuthorPage.xaml
+++ b/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client/Views/AuthorPage.xaml
@@ -4,9 +4,11 @@
              x:Class="LibraryAppCore.XF.Client.Views.AuthorPage">
     <ContentPage.Content>
         <StackLayout Margin="20">
+            
             <StackLayout x:Name="labelStack" Orientation="Horizontal">
                 <Label Text="Author Edit" FontSize="Large" Margin="10"/>
             </StackLayout>
+            
             <StackLayout x:Name="authorStack">
                 <Label Text="AuthorId:" FontSize="Medium"/>
                 <Entry Text="{Binding Path=Model.Id}" FontSize="Small" />
@@ -15,11 +17,15 @@
                 <Label Text="Surname:" FontSize="Medium"/>
                 <Entry Text="{Binding Path=Model.Surname}" FontSize="Small" />
             </StackLayout>
+
             <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                <Button Text="Add" Command="{Binding ViewModel.SaveAuthorCommand}" CommandParameter="{Binding Model}" TextColor="White" BackgroundColor="#4cae4c" FontSize="Medium" />
-                <Button Text="Delete" Command="{Binding ViewModel.DeleteAuthorCommand}" CommandParameter="{Binding Model}" TextColor="White" BackgroundColor="#d9534f" FontSize="Medium" />
-                <Button Text="Back" Command="{Binding ViewModel.BackCommand}" TextColor="White" FontSize="Medium" />
+                <Button Text="Add" Clicked="SaveAuthor" CommandParameter="{Binding Model}" TextColor="White" BackgroundColor="#4cae4c" FontSize="Medium" />
+                <Button Text="Delete" Clicked="DeleteAuthor" CommandParameter="{Binding Model}" TextColor="White" BackgroundColor="#d9534f" FontSize="Medium" />
+                <Button Text="Back" Clicked="Cancel" TextColor="White" FontSize="Medium" />
             </StackLayout>
+
+            <Label x:Name="ConnType" FontSize="Medium" />
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
