--- a/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client/Views/ChooseDbPage.xaml
+++ b/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client/Views/ChooseDbPage.xaml
@@ -11,14 +11,14 @@
             </StackLayout>
             
             <StackLayout x:Name="DbChoose" Orientation="Horizontal">
-                <Button Text="PostgreSql" x:Name="PostgreSql"  Command="{Binding DefaultConnectionCommand}" FontSize="Small" BorderWidth="1" HorizontalOptions="Start" VerticalOptions="Start" Margin="10" TextColor="White" BackgroundColor="Silver"/>
-                <Button Text="MongoDb" x:Name="MongoDb" Command="{Binding MongoDbConnectionCommand}" FontSize="Small" BorderWidth="1" HorizontalOptions="Start" VerticalOptions="Start" Margin="10" TextColor="White" BackgroundColor="Silver"/>
+                <Button Text="PostgreSql" x:Name="PostgreSql"  Clicked="ChoosePostgreSqlDb" FontSize="Small" BorderWidth="1" HorizontalOptions="Start" VerticalOptions="Start" Margin="10" TextColor="White" BackgroundColor="Silver"/>
+                <Button Text="MongoDb" x:Name="MongoDb" Clicked="ChooseMongoDb"  FontSize="Small" BorderWidth="1" HorizontalOptions="Start" VerticalOptions="Start" Margin="10" TextColor="White" BackgroundColor="Silver"/>
                 <Button Text="LocalDb" x:Name="LocalDb" Clicked="ChooseLocalDb" FontSize="Small" BorderWidth="1" HorizontalOptions="Start" VerticalOptions="Start" Margin="10" TextColor="White" BackgroundColor="Silver"/>
             </StackLayout>
             
-            <StackLayout IsVisible="{Binding viewModel.IsVisibleData}"
+            <StackLayout
                     HorizontalOptions="Center" VerticalOptions="CenterAndExpand" Padding="20">
-                <Label Text="Success!" TextColor="Green" HorizontalOptions="Center" />
+                <Label x:Name="Result" TextColor="Green" HorizontalOptions="Center" />
             </StackLayout>
             
         </StackLayout>
